unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Housing_Contact_e_mail__c.field-meta.xml
<CustomField>
    <fullName>Housing_Contact_e_mail__c</fullName>
    <label>Housing Logistics Vendor Email</label>
    <type>Email</type>
</CustomField>