unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Housing_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Housing_Contact_Phone__c</fullName>
    <label>Housing Logistics Vendor Phone</label>
    <type>Phone</type>
</CustomField>