unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Housing_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Housing_Deadline__c</fullName>
    <label>Housing Deadline</label>
    <type>Date</type>
</CustomField>