unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Housing_Logistics_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Housing_Logistics_Vendor__c</fullName>
    <label>Housing Logistics Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BCD Travel</fullName>
            </value>
            <value>
                <fullName>Am Ex</fullName>
            </value>
            <value>
                <fullName>CWT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>