unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Housing_Logistics_Vendor_Other__c.field-meta.xml
<CustomField>
    <fullName>Housing_Logistics_Vendor_Other__c</fullName>
    <label>Housing Logistics Vendor Other</label>
    <type>TextArea</type>
</CustomField>