unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Housing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Housing_Notes__c</fullName>
    <label>Housing Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>