unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Housing_Opens__c.field-meta.xml
<CustomField>
    <fullName>Housing_Opens__c</fullName>
    <label>Housing Opens</label>
    <type>Date</type>
</CustomField>