unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Housing_Required__c.field-meta.xml
<CustomField>
    <fullName>Housing_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Housing Required</label>
    <type>Checkbox</type>
</CustomField>