unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/IDSupervisor__c.field-meta.xml
<CustomField>
    <fullName>IDSupervisor__c</fullName>
    <label>I&amp;D Supervisor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ken Pantoliano</fullName>
            </value>
            <value>
                <fullName>Randy Frields</fullName>
            </value>
            <value>
                <fullName>Pat Gallagher</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>