unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/If_not_appropriate_audience_Explanation__c.field-meta.xml
<CustomField>
    <fullName>If_not_appropriate_audience_Explanation__c</fullName>
    <description>created under SAL-599</description>
    <label>If not appropriate audience- Explanation</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>