unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Last_Day_Freight__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_Freight__c</fullName>
    <description>Created under SAL 475</description>
    <label>Last Day Freight to Adv. Whs.</label>
    <type>Date</type>
</CustomField>