unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Legal_Reached_out_to_Assoc__c.field-meta.xml
<CustomField>
    <fullName>Legal_Reached_out_to_Assoc__c</fullName>
    <label>Legal Reached out to Assoc</label>
    <type>TextArea</type>
</CustomField>