unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Meeting_Room_1_Location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_1_Location__c</fullName>
    <label>Meeting Room 1 Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>