unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Meeting_Room_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_2_Date__c</fullName>
    <label>Meeting Room 2 Date</label>
    <type>Date</type>
</CustomField>