unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Meeting_Room_2_Number__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_2_Number__c</fullName>
    <label>Meeting Room 2 Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>