unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/NonShowPRJ__c.field-meta.xml
<CustomField>
    <fullName>NonShowPRJ__c</fullName>
    <label>Non Show Project (GES only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>