unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>