unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attendees__c</fullName>
    <label>Number of Attendees</label>
    <length>20</length>
    <type>Text</type>
</CustomField>