unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Number_of_Rooms_Requested_3__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rooms_Requested_3__c</fullName>
    <label>Number of Rooms Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>