unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/of_HCP_s_in_Attendance__c.field-meta.xml
<CustomField>
    <fullName>of_HCP_s_in_Attendance__c</fullName>
    <label># of HCP&#39;s in Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>