unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Payment_Status_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status_Type__c</fullName>
    <label>Payment Status &amp; Type</label>
    <type>TextArea</type>
</CustomField>