unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Pfizer_Previously_Attended__c.field-meta.xml
<CustomField>
    <fullName>Pfizer_Previously_Attended__c</fullName>
    <defaultValue>true</defaultValue>
    <label>First Time Pfizer Attendance</label>
    <type>Checkbox</type>
</CustomField>