unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Planning_Commenced__c.field-meta.xml
<CustomField>
    <fullName>Planning_Commenced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planning Commenced</label>
    <type>Checkbox</type>
</CustomField>