unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/PO_Closed__c.field-meta.xml
<CustomField>
    <fullName>PO_Closed__c</fullName>
    <label>PO Closed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>