unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Quantity_of_Staffers__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Staffers__c</fullName>
    <label>Quantity of Staffers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>