unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Reason_RE_not_used__c.field-meta.xml
<CustomField>
    <fullName>Reason_RE_not_used__c</fullName>
    <description>Changed to picklist for SAL-599</description>
    <label>Reason RE not used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planning not started</fullName>
            </value>
            <value>
                <fullName>Planning started have not confirmed RE yet</fullName>
            </value>
            <value>
                <fullName>Brand team push back</fullName>
            </value>
            <value>
                <fullName>EU issue</fullName>
            </value>
            <value>
                <fullName>Not appropriate audience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>