unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Registration_Login__c.field-meta.xml
<CustomField>
    <fullName>Registration_Login__c</fullName>
    <label>Registration Login</label>
    <type>Url</type>
</CustomField>