unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Registration_Website__c.field-meta.xml
<CustomField>
    <fullName>Registration_Website__c</fullName>
    <label>Registration Website</label>
    <type>Url</type>
</CustomField>