unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Room_Block_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Room_Block_Start_Date__c</fullName>
    <label>Room Block Start Date</label>
    <type>Date</type>
</CustomField>