unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Sales_Direct_to_GES__c.field-meta.xml
<CustomField>
    <fullName>Sales_Direct_to_GES__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will help them keep track of when sales go directly to GES for services.</description>
    <label>Sales Direct to GES</label>
    <type>Checkbox</type>
</CustomField>