unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Secretariat_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Secretariat_Contact_Email__c</fullName>
    <label>Secretariat Contact Email</label>
    <type>Email</type>
</CustomField>