unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Secretariat_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Secretariat_Contact_Name__c</fullName>
    <label>Secretariat Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>