unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Secretariat_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secretariat_Contact_Phone__c</fullName>
    <label>Secretariat Contact Phone</label>
    <type>Phone</type>
</CustomField>