unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Secretariat_Same_as_Association__c.field-meta.xml
<CustomField>
    <fullName>Secretariat_Same_as_Association__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAL 476- when checked it is used to copy the association info into secretariat.</description>
    <label>Secretariat Same as Association</label>
    <type>Checkbox</type>
</CustomField>