unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Shipping_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Province__c</fullName>
    <label>Shipping State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>