unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Shipping_Street_c__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street_c__c</fullName>
    <label>Adv. Whs. Street</label>
    <type>TextArea</type>
</CustomField>