unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Shipping_Zip_Postal_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip_Postal_Code_c__c</fullName>
    <label>Adv. Whs. Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>