unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connect2 Show</label>
    <referenceTo>GC_Connect2_Show__c</referenceTo>
    <relationshipName>GES_Connet_Corporate_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>