unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Staffing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Staffing_Strategy__c</fullName>
    <label>Staffing Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wootens</fullName>
            </value>
            <value>
                <fullName>Sky Staffing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>