unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Total_No_of_Rooms_Req__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Rooms_Req__c</fullName>
    <formula>Number_of_Rooms_Requested_1__c + Number_of_Rooms_Requested_2__c + Number_of_Rooms_Requested_3__c + 
 Number_of_Rooms_Requested_4__c + Number_of_Rooms_Requested_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total No. of Rooms Req.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>