unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Total_Product_Theater_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Theater_Estimated_Cost__c</fullName>
    <label>Total Product Theater Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>