unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/listViews/All_Corporate_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Corporate_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Name_of_Congress__c</columns>
    <columns>Acronym_of_Congress__c</columns>
    <columns>Congress_Type__c</columns>
    <columns>Exhibit_Open_Date__c</columns>
    <columns>Exhibit_Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Corporate Accounts</label>
    <language>en_US</language>
</ListView>